apps/loki/base/networkpolicies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: to-kubernetes-api-server
spec:
  egress:
  - ports:
    - port: 6444
      protocol: TCP
    to:
    - ipBlock:
        cidr: 10.0.0.0/8
  podSelector:
    matchExpressions:
    - key: app.kubernetes.io/component
      operator: In
      values:
      - ruler
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: from-alloy
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: alloy
      podSelector:
        matchLabels:
          app.kubernetes.io/name: alloy
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: alloy-logs
      podSelector:
        matchLabels:
          app.kubernetes.io/name: alloy
    ports:
    - port: http-metrics
      protocol: TCP
  podSelector:
    matchExpressions:
    - key: app.kubernetes.io/component
      operator: In
      values:
      - distributor
    matchLabels:
      app.kubernetes.io/name: loki
  policyTypes:
  - Ingress
# ---
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: from-fluent-bit
# spec:
#   ingress:
#   - from:
#     - namespaceSelector:
#         matchLabels:
#           kubernetes.io/metadata.name: fluent-bit
#       podSelector:
#         matchLabels:
#           app.kubernetes.io/name: fluent-bit
#     ports:
#     - port: http-metrics
#       protocol: TCP
#   podSelector:
#     matchExpressions:
#     - key: app.kubernetes.io/component
#       operator: In
#       values:
#       - distributor
#     matchLabels:
#       app.kubernetes.io/name: loki
#   policyTypes:
#   - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: from-grafana
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: grafana
      podSelector:
        matchLabels:
          app.kubernetes.io/name: grafana
    ports:
    - port: http-metrics
      protocol: TCP
  podSelector:
    matchExpressions:
    - key: app.kubernetes.io/component
      operator: In
      values:
      - query-frontend
    matchLabels:
      app.kubernetes.io/name: loki
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: to-rook-rgw
spec:
  egress:
  - ports:
    - port: 443
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: rook-ceph-rgw
      namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: rook-ceph-cluster
  podSelector:
    matchExpressions:
    - key: app.kubernetes.io/component
      operator: In
      values:
      - compactor
      - index-gateway
      - ingester
      - querier
      - ruler
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: from-loki-to-loki
spec:
  egress:
  - ports:
    - port: 9095
      protocol: TCP
  policyTypes:
  - Egress
  - Ingress
